# HackTech2025

./: package-lock.json  package.json
backend/: .gitignore  photogrammetry  pyproject.toml  start.sh
backend/src/backend/: main.py
backend/src/backend/splatting/: utils.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/analyze-image/: route.ts
frontend/src/app/api/get-splat/: route.ts
frontend/src/app/api/splat/: route.ts
frontend/src/app/doctor/: page.tsx
frontend/src/app/patient/: page.tsx
frontend/src/app/test-loader/: page.tsx
frontend/src/app/view-model/: page.tsx
frontend/src/assets/animations/: idle-avatar.json  talking-avatar.json
frontend/src/components/: ChatInterface.tsx  ChatMessage.tsx  TalkingAvatar.tsx  ThreeJSViewer.tsx
frontend/src/lib/: socket.ts  speechUtils.ts
frontend/src/types/: three-usdz-loader.d.ts
frontend/src/utils/: splatStatus.ts
